Added tox testing environment

--- a/ddpinspect/setup.cfg
+++ b/ddpinspect/setup.cfg
@@ -34,6 +34,9 @@ package_dir =
 #
 #[options.package_data]
 #slapping = py.typed
-#
-#[flake8]
-#max-line-length = 160
+
+[flake8]
+max-line-length = 160
+per-file-ignores =
+    # line too long
+    src/parserlib/urldetectionregex.py: E501
