Added mypy type checking

--- a/ddpinspect/tox.ini
+++ b/ddpinspect/tox.ini
@@ -1,6 +1,6 @@
-[tox]
+[ox]
 minversion = 3.26.0
-envlist = py37, py38, py39, p310, flake8
+envlist = py37, py38, py39, p310, flake8, mypy
 isolated_build = true
 
 [testenv]
@@ -15,3 +15,10 @@ commands =
 basepython = python3.10
 deps = flake8
 commands = flake8 src tests
+
+[testenv:mypy]
+basepython = python3.10
+deps =
+    -r{toxinidir}/requirements_dev.txt
+commands = mypy src
+
