--- a/ddpinspect/requirements.txt
+++ b/ddpinspect/requirements.txt
@@ -1,10 +1,11 @@
 attrs==22.1.0
 certifi==2022.9.14
 charset-normalizer==2.1.1
--e git+ssh://git@github.com/d3i-infra/ddp-inspector.git@e7d971004701671ad14dee89c1511e045480007f#egg=ddpinspect&subdirectory=ddpinspect
+-e git+ssh://git@github.com/d3i-infra/ddp-inspector.git@85f58f1f1edbbee1444f3a11b715a6b31c1431e5#egg=ddpinspect&subdirectory=ddpinspect
 distlib==0.3.6
 et-xmlfile==1.1.0
 filelock==3.8.0
+flake8==5.0.4
 html5lib==1.1
 idna==3.4
 iniconfig==1.1.1
@@ -19,7 +20,9 @@ pluggy==1.0.0
 ptyprocess==0.7.0
 py==1.11.0
 pycodestyle==2.9.1
+pyflakes==2.5.0
 pyparsing==3.0.9
+pytest==7.1.3
 python-dateutil==2.8.2
 python-magic==0.4.27
 pytz==2022.2.1
@@ -27,6 +30,7 @@ requests==2.28.1
 six==1.16.0
 tomli==2.0.1
 tomlkit==0.11.4
+tox==3.26.0
 urllib3==1.26.12
 virtualenv==20.16.5
 webencodings==0.5.1
