--- a/ddpinspect/tox.ini
+++ b/ddpinspect/tox.ini
@@ -1,6 +1,6 @@
-[ox]
+[tox]
 minversion = 3.26.0
-envlist = py37, py38, py39, p310, flake8, mypy
+envlist = p310, flake8, mypy
 isolated_build = true
 
 [testenv]
