--- a/ddpinspect/tox.ini
+++ b/ddpinspect/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.26.0
-envlist = p310, flake8, mypy
+envlist = p310, flake8, mypy, pylint
 isolated_build = true
 
 [testenv]
@@ -10,6 +10,12 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pytest --basetemp={envtmpdir}
+
+[testenv:pylint]
+basepython = python3.10
+deps =
+    -r {toxinidir}/requirements_dev.txt
+commands = pylint src
 
 [testenv:flake8]
 basepython = python3.10
