--- a/ddpinspect/tox.ini
+++ b/ddpinspect/tox.ini
@@ -1,7 +1,11 @@
 [tox]
 minversion = 3.26.0
-envlist = p310, flake8, mypy, pylint
+envlist = py310, flake8, mypy, pylint
 isolated_build = true
+
+[gh-actions]
+python =
+    3.10: py310, flake8, pylint, mypy
 
 [testenv]
 setenv =
