added input validation check for twitter zip

--- a/ddpinspect/pyproject.toml
+++ b/ddpinspect/pyproject.toml
@@ -22,7 +22,7 @@ warn_unused_configs = true
 no_implicit_reexport = true
 
 [tool.pylint.BASIC]
-good-names = ["f", "e", "df", "p", "k", "v", "zi", "zf"]
+good-names = ["f", "fp", "e", "df", "p", "k", "v", "zi", "zf"]
 
 [tool.pylint.'MESSAGES CONTROL']
 disable = ["C0301", "R0801", "W0150", "W0703"] # long lines, similarcode, finally, too general exception
