first youtube exploration added

--- a/ddpinspect/setup.cfg
+++ b/ddpinspect/setup.cfg
@@ -11,7 +11,7 @@ classifiers =
 [options]
 packages =
     parserlib
-    scanddp
+    ddpinspect
 install_requires =
     pandas>=1.4.3
     python-magic>=0.4.27
