--- a/ddpinspect/pyproject.toml
+++ b/ddpinspect/pyproject.toml
@@ -22,7 +22,7 @@ warn_unused_configs = true
 no_implicit_reexport = true
 
 [tool.pylint.BASIC]
-good-names = ["b", "i", "f", "d", "fp", "e", "df", "p", "k", "v", "zi", "zf"]
+good-names = ["b", "i", "f", "d", "fp", "e", "df", "p", "k", "v", "zi", "zf", "id"]
 
 [tool.pylint.'MESSAGES CONTROL']
 disable = ["C0301", "R0801", "W0150", "W0703", "R0902"] 
