--- a/ddpinspect/setup.cfg
+++ b/ddpinspect/setup.cfg
@@ -15,6 +15,7 @@ packages =
 install_requires =
     pandas>=1.4.3
     python-magic>=0.4.27
+    beautifulsoup4>=4.11.1
 python_requires = >=3.9
 package_dir =
     =src
