--- a/ddpinspect/pyproject.toml
+++ b/ddpinspect/pyproject.toml
@@ -25,7 +25,4 @@ no_implicit_reexport = true
 good-names = ["b", "i", "f", "d", "fp", "e", "df", "p", "k", "v", "zi", "zf", "id"]
 
 [tool.pylint.'MESSAGES CONTROL']
-disable = ["C0301", "R0801", "W0150", "W0703", "R0902"] 
-
-
-
+disable = ["C0301", "R0801", "W0150", "W0703", "R0902", "R0914"] 
