--- a/ddpinspect/setup.cfg
+++ b/ddpinspect/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ddpinspect
-description = "A package to extract the contents of Data Download Packages (DDP). Version 0.1.0 was used to run the D3I-pilot study"
-version = 0.1.0
+description = "A package to extract the contents of Data Download Packages (DDP)"
+version = 0.1.1
 author = Niek de Schipper
 license = GNU Affero General Public License v3.0
 license_files = LICENSE
